# backstitch

./: .gitignore  CONTRIBUTING.md  Developers.md  README.md  build.env  justfile
.github/actions/build-plugin/: action.yml
.github/actions/macos-sign/: action.yml
.github/workflows/: all_editor_builds.yml  compose_projects.yml  linux_builds.yml  macos_builds.yml  merge_builds.yml  prepare_composite.yml  release.yml  runner.yml  rust_validation.yml  windows_builds.yml
.scripts/: rebase_godot.sh
editor/: SCsub  backstitch_editor.cpp  backstitch_editor.h  patchwork_editor.cpp  patchwork_editor.h  register_types.cpp  register_types.h
public/gdscript/: branch_picker.gd  diff_inspector_container.gd  highlight_changes_layer.gd  loading_circle.gdshader  loading_circle.gdshader.uid  loading_circle.tres  monkey_tester.gd  sidebar.gd  sidebar.tscn  task_modal.gd  toolbar.gd  toolbar.tscn  utils.gd
public/icons/: ActionCopy.svg.import  ArrowUp32.svg.import  Branch16.svg.import  Branch22.svg.import  Branch24.svg.import  Clear.svg.import  CollapsibleClosed.svg.import  CollapsibleOpen.svg.import  Confirm24.svg.import  ExternalLink.svg.import  FileAdd.svg.import  FileModify.svg.import  FileRemove.svg.import  GuiClose.svg.import  GuiClose24.svg.import  GuiTabMenuHl.svg.import  GuiTabMenuHlHorizontal.svg.import  Merge.svg.import  Monkey.svg.import  NodeWarning.svg.import  Person.svg.import  PullRequest.svg.import  Reload.svg.import  Remove.svg.import  Remove24.svg.import  Save.svg.import  StatusError.svg.import  StatusSuccess.svg.import  StatusSuccess32.svg.import  StatusSync.svg.import  StatusWarning.svg.import  StatusWarning32.svg.import  Tools.svg.import  UndoRedo.svg.import  UndoRedo24.svg.import
rust/: Cargo.toml
rust/macos/libpatchwork_rust_core.macos.framework/Resources/: Info.plist
rust/src/: fs.rs  helpers.rs  interop.rs  lib.rs  parser.rs  project.rs
rust/src/diff/: differ.rs  resource_differ.rs  scene_differ.rs  text_differ.rs
rust/src/fs/: file_utils.rs
rust/src/helpers/: autosurgeon_utils.rs  branch.rs  doc_utils.rs  history_path.rs  history_ref.rs  spawn_utils.rs  tracing.rs  utils.rs
rust/src/interop/: backstitch_config.rs  backstitch_resource_loader.rs  diff_inspector_section.rs  extension.rs  fake_importers.rs  godot_accessors.rs  godot_diffs.rs  godot_helpers.rs  godot_project.rs  lazy_load_editor_property.rs  lazy_load_token.rs  text_differ_view.rs
rust/src/parser/: godot_parser.rs  parser_defs.rs
rust/src/parser/godot_parser/: tests.rs
rust/src/project/: branch_db.rs  change_ingester.rs  connection.rs  doc_db.rs  document_watcher.rs  driver.rs  fs.rs  main_thread_block.rs  peer_watcher.rs  project.rs  project_api.rs  project_api_impl.rs  project_base.rs  sync_automerge_to_fs.rs
rust/src/project/branch_db/: branch.rs  branch_sync.rs  commit.rs  file.rs  merge_revert.rs  util.rs
rust/src/project/doc_db/: repo.rs
rust/src/project/driver/: tests.rs
rust/src/project/fs/: fs_index.rs  fs_traversal.rs  fs_watcher.rs  sync_automerge_to_fs.rs  sync_fs_to_automerge.rs
rust/src/project/fs/fs_index/: tests.rs
rust/src/project/main_thread_block/: test.rs
scripts/patchwork_lldb_formatters/: __init__.py
(+1 files in other folders)
